@@ -1,13 +1,15 @@
 package agents.server;
 
-import static common.constant.DFServiceConstants.*;
+import static common.constant.DFServiceConstants.GS_SERVICE_TYPE;
+import static common.constant.DFServiceConstants.SA_SERVICE_NAME;
+import static common.constant.DFServiceConstants.SA_SERVICE_TYPE;
 import static yellowpages.YellowPagesService.register;
 import static yellowpages.YellowPagesService.search;
 
+import agents.server.behaviour.ListenForUnfinishedJobInformation;
 import agents.server.behaviour.ReceiveJobRequest;
 import agents.server.behaviour.listener.ListenForPowerConfirmation;
 import agents.server.behaviour.listener.ListenForServerEvent;
-import agents.server.behaviour.listener.ListenForUnfinishedJobInformation;
 import agents.server.behaviour.powershortage.listener.network.ListenForJobTransferCancellation;
 import agents.server.behaviour.powershortage.listener.network.ListenForJobTransferConfirmation;
 import agents.server.behaviour.powershortage.listener.source.ListenForSourcePowerShortage;
@@ -16,14 +18,10 @@ import agents.server.domain.ServerStateManagement;
 import behaviours.ReceiveGUIController;
 import jade.core.AID;
 import jade.core.behaviours.Behaviour;
-import jade.core.behaviours.ParallelBehaviour;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
-
-import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 /**
  * Agent representing the Server Agent which executes the clients' jobs
@@ -69,21 +67,22 @@ public class ServerAgent extends AbstractServerAgent {
                 doDelete();
             }
         } else {
-            logger.info("Incorrect arguments: some parameters for server agent are missing - check the parameters in the documentation");
+            logger.info(
+                "Incorrect arguments: some parameters for server agent are missing - check the parameters in the documentation");
             doDelete();
         }
     }
 
     private List<Behaviour> behavioursRunAtStart() {
-        final ParallelBehaviour parallelBehaviour = new ParallelBehaviour();
-        parallelBehaviour.addSubBehaviour(new ReceiveJobRequest());
-        parallelBehaviour.addSubBehaviour(new ListenForPowerConfirmation());
-        parallelBehaviour.addSubBehaviour(new ListenForUnfinishedJobInformation());
-        parallelBehaviour.addSubBehaviour(new ListenForJobTransferConfirmation(this));
-        parallelBehaviour.addSubBehaviour(new ListenForSourcePowerShortage());
-        parallelBehaviour.addSubBehaviour(new ListenForSourceTransferConfirmation());
-        parallelBehaviour.addSubBehaviour(new ListenForServerEvent(this));
-        parallelBehaviour.addSubBehaviour(new ListenForJobTransferCancellation(this));
-        return Collections.singletonList(parallelBehaviour);
+        return List.of(
+            new ReceiveJobRequest(),
+            new ListenForUnfinishedJobInformation(),
+            new ListenForPowerConfirmation(),
+            new ListenForJobTransferConfirmation(this),
+            new ListenForSourcePowerShortage(),
+            new ListenForSourceTransferConfirmation(),
+            new ListenForServerEvent(this),
+            new ListenForJobTransferCancellation(this)
+        );
     }
 }
